# opengl

./: CMakeLists.txt  MatrixUniform.cpp  MatrixUniform.h  Shader.cpp  Shader.h  VAOobject.cpp  VAOobject.h  camera.cpp  camera.h  frag  glad.c  main.cpp  shader.cpp  shader.h  vert  vertices_data.h
Source/: vertices_data.h
model/: Cube.cpp  Cube.h  Model.cpp  Model.h  Shape.cpp  Shape.h
shader/: frag  lightvert
utils/: stb_image.cpp
